--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,10 +5,10 @@
 @import url(setting/reset.css);
 
 /* section */
+@import url(section//intro.css);
 @import url(section/header.css);
-@import url(section//about.css);
+/* @import url(section//about.css);
 @import url(section//garphics.css);
 @import url(section//project.css);
-@import url(section//intro.css);
-@import url(section//work.css);
+@import url(section//work.css); */
 
