--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,8 +7,8 @@
 /* section */
 @import url(section//intro.css);
 @import url(section/header.css);
-/* @import url(section//about.css);
-@import url(section//garphics.css);
+/* @import url(section//about.css); */
+/* @import url(section//garphics.css); */
 @import url(section//project.css);
-@import url(section//work.css); */
+@import url(section//work.css);
 
