--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,7 @@
 @charset "UTF-8";
 /* setting */
+@import url(@splidejs/splide/css);
+
 @import url(setting/fonts.css);
 @import url(setting/vars.css);
 @import url(setting/reset.css);
@@ -7,8 +9,9 @@
 /* section */
 @import url(section//intro.css);
 @import url(section/header.css);
-/* @import url(section//about.css); */
-/* @import url(section//garphics.css); */
+@import url(section//about.css);
+@import url(section//graphics.css);
 @import url(section//project.css);
 @import url(section//work.css);
+@import url(section/splide.css);
 
