--- a/src/css/section/about.css
+++ b/src/css/section/about.css
@@ -1,66 +1,206 @@
-.about_inner{
-    display: flex;
-    justify-content: space-between;
+#About{
+    width: 100%;
+    position: relative;
 }
 
-.about_title{
+.about_inner {
+    width: 100%;
+    height: 100vh;
+    padding: 16px;
+}
+
+.about_title {
     position: sticky;
     top: 70px;
     left: 0;
     width: 48%;
-    height: 5vw;
+    height: 6vw;
     font-size: 4vw;
     font-weight: 900;
     font-family: var(--mainKor-font);
     text-transform: uppercase;
-    color: var(--black100);
-    border-bottom: .4vw solid var(--black100);
+    color: var(--white);
+    border-bottom: .4vw solid var(--white);
+    z-index: 9999;
 }
 
-.about_title em{
-    font-size: 1.25rem;
-    font-weight: 400;
-    line-height: 2;
+
+
+.about_desc {
+    width: 60%;
 }
 
-.about_desc{
-    width: 50%;
+.about_item{
+    position: absolute;
+    cursor: pointer;
 }
 
-.about_desc span{
-    font-size: 5vw;
-    font-weight: 900;
-    line-height: 1.3;
-    font-family: var(--mainNum-font);
+.about_item img{
+    width: 80%;
 }
 
-.about_desc p{
-    color: var(--black100);
+.about_desc::before{
+    content: '';
+    position: absolute;
+    border-top-left-radius: 9999px;
+    border-top-right-radius: 9999px;
+    background: #FAE57C;
+    width: 550px;
+    height: 350px;
+    left: 50%;
+    bottom: 0;
+    transform: translateX(-50%);
 }
 
-.about_desc .time_line{
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+#About .me{
+    width: 20%;
+    z-index: 9999;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%);
 }
+#About .me img{
+    width: 100%;
+}
+
+
+@keyframes dance1{
+    0% {
+        transform: rotate(-3deg);
+    }
+
+    50% {
+        transform: rotate(3deg);
+    }
+
+    100% {
+        transform: rotate(-3deg);
+    }
+}
+
+@keyframes dance2{
+    0% {
+        transform: rotate(3deg);
+    }
+
+    50% {
+        transform: rotate(-3deg);
+    }
+
+    100% {
+        transform: rotate(3deg);
+    }
+}
+
+
 
 @media screen and (max-width:768px) {
-    .about_inner{
-        flex-direction: column;
-    }
-    .aobut_title{
+  
+    .about_title {
         width: 100%;
+        height: auto;
         margin-bottom: 16px;
         font-size: 30px;
-        top: 70px;
-        background: var(--subBg500);
+        top: -30px;
     }
-    .about_desc{
+
+    .about_desc {
         width: 100%;
     }
-    .about_desc span{
-        font-size: 5vw;
+
+    .about_desc::before{
+        display: none;
+    }
+
+    .about_item img{
+        width: 60%;
+    }
+
+    .intro{
+        left: 100px;
+        top: 130px;
+        animation: dance1 2s ease-out infinite;
+    }
+    
+    .skill{
+        top: 300px;
+        right: 90px;
+        transform: rotate(-20deg);
+        animation: dance2 2s ease-out infinite;
+    }
+    .license{
+        left: 100px;
+        bottom: 200px;
+        transform: rotate(20deg);
+        animation: dance1 2s ease-out infinite;
+    }
+    
+    .career{
+        bottom: 50px;
+        right: 10px;
+        animation: dance2 2s ease-out infinite;
+    }
+    
+    #About .me{
+        display: none;
+    }
+   
+}
+
+@media screen and (min-width:769px) {
+    .intro{
+        bottom: 20px;
+        left: 100px;
+        animation: dance1 2s ease-out infinite;
+    }
+    
+    .skill{
+        bottom: 300px;
+        left: 150px;
+        transform: rotate(-20deg);
+        animation: dance2 2s ease-out infinite;
+    }
+    .license{
+        bottom: 300px;
+        right: 150px ;
+        transform: rotate(20deg);
+        animation: dance1 2s ease-out infinite;
+    }
+    
+    .career{
+        bottom: 20px;
+        right: 100px;
+        animation: dance2 2s ease-out infinite;
     }
 }
 
+@media screen and (min-width:1080px) {
+    .about_item img{
+        width: 100%;
+    }
+    .intro{
+        bottom: 20px;
+        left: 120px;
+        animation: dance1 2s ease-out infinite;
+    }
+    
+    .skill{
+        bottom: 280px;
+        left: 350px;
+        transform: rotate(-20deg);
+        animation: dance2 2s ease-out infinite;
+    }
+    .license{
+        bottom: 280px;
+        right: 350px ;
+        transform: rotate(20deg);
+        animation: dance1 2s ease-out infinite;
+    }
+    
+    .career{
+        bottom: 20px;
+        right: 120px;
+        animation: dance2 2s ease-out infinite;
+    }
+}
