--- a/src/css/section/header.css
+++ b/src/css/section/header.css
@@ -1,9 +1,14 @@
+body{
+    overflow: hidden;
+}
+
+/* ------------------------------ */
 #header {
     position: fixed;
     left: 0;
     top: 0;
-    width: 100%;
     z-index: 99;
+    width: 100%;
 }
 
 .header_inner {
@@ -11,7 +16,7 @@
     align-items: center;
     justify-content: space-between;
     background-color: rgba(85, 57, 57, 0.1);
-    backdrop-filter: blur(15px);
+    backdrop-filter: blur(30px);
     padding: 1rem;
 }
 
@@ -21,103 +26,139 @@
     text-transform: uppercase;
 }
 
-.header_logo em {
-    font-size: 10px;
+nav {
+    position: fixed;
+    z-index: 100;
+    border-radius: 90px;
+    text-align: center;
+    right: 0;
+}
+
+nav ul {
+    display: flex;
+    justify-content: space-between;
+    gap: 5px;
+}
+
+nav ul li a {
     display: block;
-    color: var(--black200);
+    padding: 5px 12px;
+    color: var(--point);
+    font-size: 20px;
+    font-style: bold;
+    transform: uppercase;
 }
 
-.header_nav li {
-    display: inline-block;
+nav ul li:hover>a {
+    color: var(--white);
+    background: var(--point);
 }
 
-.header_nav li a {
-    text-transform: uppercase;
-    font-size: 14px;
-    padding: 10px;
-    position: relative;
-    display: block;
-}
 
-.header_nav li a::before {
-    content: '';
-    width: calc(100% - 28px);
-    height: 2px;
-    background-color: var(--black);
-    position: absolute;
-    left: 14px;
-    bottom: 10px;
-    transform: scaleX(0);
-    transition: .35s;
-}
-
-.header_nav li a:hover::before{
-    transform: scaleX(1);
-}
 
 .header_nav_mobile {
     cursor: pointer;
     display: none;
 }
 
-.header_nav_mobile span{
+.header_nav_mobile span {
     display: block;
     width: 40px;
     height: 3px;
-    background-color: var(--black);
+    background-color: var(--white);
     margin-top: 0;
     position: relative;
 }
-.header_nav_mobile span::before{
+
+.header_nav_mobile span::before {
     content: '';
     width: 40px;
     height: 3px;
-    background-color: var(--black);
+    background-color: var(--white);
     top: 10px;
     right: 0;
     position: absolute;
     transition: .35s;
 }
-.header_nav_mobile span::after{
+
+.header_nav_mobile span::after {
     content: '';
     width: 40px;
     height: 3px;
-    background-color: var(--black);
+    background-color: var(--white);
     bottom: 10px;
     left: 0;
     position: absolute;
     transition: .35s;
 }
 
-/* --------------------------------- */
 
 @media screen and (max-width:768px) {
-    .header_nav{
+    .header_nav {
         position: absolute;
-        right:-143px;
+        right: -130px;
         top: 0;
-        text-align: right;
+        text-align: center;
         transition: .35s;
+ 
     }
-    .header_nav ul{
+
+    nav ul {
         position: absolute;
+        display: block;
         right: 0;
-        top: 68px;
+        top: 53px;
         z-index: 100;
-        background-color: rgb(216, 216, 216);
-        padding: 0 20px;
+        background: rgba(255, 255, 255, 0.3);
+        border-radius: 10px;
     }
-    .header_nav.show{
+
+    nav ul li a {
+        padding: 5px 10px;
+        color: var(--white);
+        border-radius: 10px;
+        font-size: 18px;
+    }
+    nav li a.on {
+        background-color: rgba(255, 255, 255, 0.3);
+        color: var(--black);
+    }
+
+    nav ul li:hover>a {
+        background: var(--point);
+        color: #091F5B;
+    }
+
+    .header_nav.show {
         right: 0;
     }
-    .header_nav_mobile{
+
+    .header_nav_mobile {
         display: block;
     }
 
-    .header_nav.show+.header_nav_mobile span::before{
+    .header_nav.show+.header_nav_mobile span::before {
         width: 20px;
     }
-    .header_nav.show+.header_nav_mobile span::after{
+
+    .header_nav.show+.header_nav_mobile span::after {
         width: 20px;
     }
+
+}
+
+@media screen and (min-width:769px) {
+    nav li a.on {
+        background-color: rgba(255, 255, 255, 0.3);
+        color: var(--white);
+        border-radius: 99px;
+        padding: 5px 12px;
+    }
+
+    nav ul li:hover>a {
+        border-radius: 99px;
+        padding: 5px 12px;
+    }
+
+
 }
