--- a/src/css/section/work.css
+++ b/src/css/section/work.css
@@ -1,6 +1,6 @@
 #Work {
     width: 100%;
-    margin-top: 10vh;
+    margin-top: 80px;
     overflow: hidden;
 }
 
@@ -13,13 +13,14 @@
     top: 70px;
     left: 0;
     width: 100%;
-    height: 5vw;
+    height: 6vw;
     font-size: 4vw;
+    font-weight: 900;
     line-height: 1.6;
     font-family: var(--mainKor-font);
     text-transform: uppercase;
-    color: var(--black100);
-    border-bottom: .4vw solid var(--black100);
+    color: var(--white);
+    border-bottom: .4vw solid var(--white);
     margin-bottom: 100px;
 }
 
@@ -36,8 +37,9 @@
 
 .work_item {
     width: 400px;
-    height: 70vh;
-    border: 1px solid #000;
+    height: 80vh;
+    border: 1px solid var(--white);
+    color: var(--white);
     padding: 2.5rem;
     margin-right: 20px;
 }
@@ -47,14 +49,13 @@
     text-align: center;
     padding: .8rem 0;
     font-weight: 700;
-    color: var(--black100);
-    border-bottom: 2px solid var(--black100);
+    border-bottom: 2px solid var(--white);
 }
 
 .work_item .desc {
     font-size: 1.2rem;
-    color: var(--black100);
-    border-bottom: 2px solid var(--black100);
+    color: var(--white);
+    border-bottom: 2px solid var(--white);
 }
 
 .work_item .num {
@@ -63,7 +64,7 @@
 }
 
 .work_item .site {
-    border: 1px solid var(--black100);
+    border: 1px solid var(--white);
     display: block;
     text-align: center;
     padding: .5rem 1.5rem;
@@ -91,41 +92,41 @@
 }
 
 .work_item.w1 {
-    background-color: rgb(225, 211, 211);
+    background-color: rgb(155, 155, 155);
 }
 
 .work_item.w2 {
-    background-color: rgb(225, 211, 211);
+    background-color: rgb(155, 155, 155);
 }
 
 .work_item.w3 {
-    background-color: rgb(225, 211, 211);
+    background-color: rgb(155, 155, 155);
 }
 
 .work_item.w4 {
-    background-color: rgb(225, 211, 211);
+    background-color: rgb(155, 155, 155);
 }
 
 .work_item.w5 {
-    background-color: rgb(225, 211, 211);
+    background-color: rgb(155, 155, 155);
 }
 
 .work_item.w6 {
-    background-color: rgb(225, 211, 211);
+    background-color: rgb(155, 155, 155);
 }
 
 .work_item.w7 {
-    background-color: rgb(225, 211, 211);
+    background-color: rgb(155, 155, 155);
 }
 
 .work_item.w8 {
-    background-color:  rgb(225, 211, 211);
+    background-color:  rgb(155, 155, 155);
 }
 .work_item.w9 {
-    background-color:  rgb(225, 211, 211);
+    background-color:  rgb(155, 155, 155);
 }
 .work_item.w10 {
-    background-color:  rgb(225, 211, 211);
+    background-color:  rgb(155, 155, 155);
 }
 
 @media screen and (max-width:768px) {
@@ -135,7 +136,6 @@
         font-size: 30px;
         height: auto;
         top: -30px;
-        background-color: var(--mainBg-color);
     }
 
     .work_item {
