--- a/src/css/section/header.css
+++ b/src/css/section/header.css
@@ -52,6 +52,8 @@ nav ul li a {
 nav ul li:hover>a {
     color: var(--white);
     background: var(--point);
+    border-radius: 99px;
+    padding: 5px 12px;
 }
 
 
@@ -147,7 +149,7 @@ nav ul li:hover>a {
 
 }
 
-@media screen and (min-width:769px) {
+/* @media screen and (min-width:769px) {
     nav li a.on {
         background-color: rgba(255, 255, 255, 0.3);
         color: var(--white);
@@ -155,10 +157,4 @@ nav ul li:hover>a {
         padding: 5px 12px;
     }
 
-    nav ul li:hover>a {
-        border-radius: 99px;
-        padding: 5px 12px;
-    }
-
-
-}
+} */
