--- a/src/css/section/header.css
+++ b/src/css/section/header.css
@@ -7,7 +7,7 @@ body{
     position: fixed;
     left: 0;
     top: 0;
-    z-index: 9999;
+    z-index: 4;
     width: 100%;
 }
 
@@ -52,8 +52,6 @@ nav ul li a {
 nav ul li:hover>a {
     color: var(--white);
     background: var(--point);
-    border-radius: 99px;
-    padding: 5px 12px;
 }
 
 
@@ -149,12 +147,18 @@ nav ul li:hover>a {
 
 }
 
-/* @media screen and (min-width:769px) {
+@media screen and (min-width:769px) {
     nav li a.on {
-        background-color: rgba(255, 255, 255, 0.3);
-        color: var(--white);
+        /* background-color: rgba(255, 255, 255, 0.3);
+        color: var(--white); */
         border-radius: 99px;
         padding: 5px 12px;
     }
 
-} */
+    nav ul li:hover>a {
+        border-radius: 99px;
+        padding: 5px 12px;
+    }
+
+
+}
