--- a/src/css/section/project.css
+++ b/src/css/section/project.css
@@ -1,57 +1,40 @@
 .pj_inner {
     padding: 16px;
+    background-color: var(--point);
+    border-radius: 30px;
 }
+
 
 .pj_title {
     position: sticky;
-    top: 70px;
-    left: 0;
-    width: 100%;
+    top: 10%;
+    left: 5%;
+    width: 50%;
     height: 6vw;
-    font-size: 4vw;
+    font-size: 6vw;
     font-weight: 900;
     line-height: 1.2;
     font-family: var(--mainKor-font);
     text-transform: uppercase;
-    color: var(--white);
-    border-bottom: .4vw solid var(--white);
+    color: var(--black);
     margin-bottom: 100px;
+  
 }
 
 .pj_item {
     position: sticky;
-    height: 70vh;
+    width: 50%;
+    height: 50vh;
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
-    left: 0;
     flex-direction: column;
     border-radius: 20px;
-}
-
-.pj_item.s1 {
+    margin-bottom: 20px;
+    left: 50%;
     background-color: #EDF0F5;
     color: var(--black);
-    top: 200px;
-}
-
-.pj_item.s2 {
-    background-color: #BAD6EB;
-    color: var(--black);
-    top: 250px;
-}
-
-.pj_item.s3 {
-    background-color: #A3C5F2;
-    color: var(--black);
-    top: 300px;
-}
-
-.pj_item.s4 {
-    background-color: #6F96D1;
-    color: var(--black);
-    top: 350px;
 }
 
 .pj_item .num {
@@ -97,7 +80,7 @@
 .pj_item .info {
     position: absolute;
     left: 0;
-    bottom: 10%;
+    bottom: 20px;
     width: 98%;
     margin-left: 1%;
     border-top: 1px solid var(--black);
@@ -124,18 +107,18 @@
         top: 30px;
         z-index: 9999;
     }
-    .pj_item.s1{top: 140px;}
-    .pj_item.s2{top: 180px;}
-    .pj_item.s3{top: 220px;}
-    .pj_item.s4{top: 260px;}
+    
+    .pj_item.s1{top: 10px;}
+    .pj_item.s2{top: 100px;}
+    .pj_item.s3{top: 200px;}
 
     .pj_item .num{
-        font-size: 50px;
+        font-size: 40px;
         left: 20px;
         top: 20px;
     }
     .pj_item .text div{
-        font-size: 26px;
+        font-size: 20px;
     }
     .pj_item .info{
         flex-direction: column;
