--- a/src/css/section/about.css
+++ b/src/css/section/about.css
@@ -6,7 +6,6 @@
 .about_inner {
     width: 100%;
     height: 100vh;
-    padding: 16px;
 }
 
 .about_title {
@@ -19,9 +18,10 @@
     font-weight: 900;
     font-family: var(--mainKor-font);
     text-transform: uppercase;
-    color: var(--white);
-    border-bottom: .4vw solid var(--white);
+    color: var(--black);
+    border-bottom: .4vw solid var(--black);
     z-index: 9999;
+    padding-left: 20px;
 }
 
 
@@ -35,62 +35,14 @@
     cursor: pointer;
 }
 
+.license ul li{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .about_item img{
     width: 80%;
-}
-
-.about_desc::before{
-    content: '';
-    position: absolute;
-    border-top-left-radius: 9999px;
-    border-top-right-radius: 9999px;
-    background: #FAE57C;
-    width: 550px;
-    height: 350px;
-    left: 50%;
-    bottom: 0;
-    transform: translateX(-50%);
-}
-
-#About .me{
-    width: 20%;
-    z-index: 9999;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-50%);
-}
-#About .me img{
-    width: 100%;
-}
-
-
-@keyframes dance1{
-    0% {
-        transform: rotate(-3deg);
-    }
-
-    50% {
-        transform: rotate(3deg);
-    }
-
-    100% {
-        transform: rotate(-3deg);
-    }
-}
-
-@keyframes dance2{
-    0% {
-        transform: rotate(3deg);
-    }
-
-    50% {
-        transform: rotate(-3deg);
-    }
-
-    100% {
-        transform: rotate(3deg);
-    }
 }
 
 
@@ -117,90 +69,6 @@
         width: 60%;
     }
 
-    .intro{
-        left: 100px;
-        top: 130px;
-        animation: dance1 2s ease-out infinite;
-    }
-    
-    .skill{
-        top: 300px;
-        right: 90px;
-        transform: rotate(-20deg);
-        animation: dance2 2s ease-out infinite;
-    }
-    .license{
-        left: 100px;
-        bottom: 200px;
-        transform: rotate(20deg);
-        animation: dance1 2s ease-out infinite;
-    }
-    
-    .career{
-        bottom: 50px;
-        right: 10px;
-        animation: dance2 2s ease-out infinite;
-    }
-    
-    #About .me{
-        display: none;
-    }
+
    
-}
-
-@media screen and (min-width:769px) {
-    .intro{
-        bottom: 20px;
-        left: 100px;
-        animation: dance1 2s ease-out infinite;
-    }
-    
-    .skill{
-        bottom: 300px;
-        left: 150px;
-        transform: rotate(-20deg);
-        animation: dance2 2s ease-out infinite;
-    }
-    .license{
-        bottom: 300px;
-        right: 150px ;
-        transform: rotate(20deg);
-        animation: dance1 2s ease-out infinite;
-    }
-    
-    .career{
-        bottom: 20px;
-        right: 100px;
-        animation: dance2 2s ease-out infinite;
-    }
-}
-
-@media screen and (min-width:1080px) {
-    .about_item img{
-        width: 100%;
-    }
-    .intro{
-        bottom: 20px;
-        left: 120px;
-        animation: dance1 2s ease-out infinite;
-    }
-    
-    .skill{
-        bottom: 280px;
-        left: 350px;
-        transform: rotate(-20deg);
-        animation: dance2 2s ease-out infinite;
-    }
-    .license{
-        bottom: 280px;
-        right: 350px ;
-        transform: rotate(20deg);
-        animation: dance1 2s ease-out infinite;
-    }
-    
-    .career{
-        bottom: 20px;
-        right: 120px;
-        animation: dance2 2s ease-out infinite;
-    }
 }
