--- a/src/css/section/graphics.css
+++ b/src/css/section/graphics.css
@@ -1,7 +1,10 @@
+#Graphics {
+    width: 100%;
+}
+
 .graphics_inner {
     width: 100%;
     height: 100%;
-    padding: 16px;
 }
 
 
@@ -19,38 +22,36 @@
     color: var(--black);
     border-bottom: .4vw solid var(--black);
     margin-bottom: 100px;
+    padding-left: 20px;
+    background: #f3f3f3;
 }
 
 .stage {
-    width: 80%;
+    width: 100%;
     margin: auto;
+    margin-top: 100px;
 }
 
 .stage img {
     width: 100%;
     transition: .35s;
 }
-
-.stage .inner ul {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
+.img-inner{
+    text-transform: uppercase;
 }
 
 
-.img_box{
+.img_box {
     position: relative;
     overflow: hidden;
     transition: .35s;
 }
 
-.img_box::before{
-    position: absolute;   
+.img_box::before {
+    position: absolute;
     content: '';
     width: 100%;
-    height:100%;
+    height: 100%;
     background-color: var(--point);
     left: 0;
     top: 0;
@@ -59,11 +60,11 @@
     transition-delay: .35s;
 }
 
-.img_box::after{
-    position: absolute;   
+.img_box::after {
+    position: absolute;
     content: '';
     width: 100%;
-    height:100%;
+    height: 100%;
     background-color: #13213C;
     left: 0;
     top: 0;
@@ -72,15 +73,16 @@
     z-index: 3;
 }
 
-.img_box.active::before{
+.img_box.active::before {
     width: 0%;
 }
-.img_box.active::after{
+
+.img_box.active::after {
     height: 0%;
 }
 
 .graphics_wrap .stage .img_text {
-    width: 40%;
+    width: 50%;
     color: var(--black);
 }
 
@@ -89,48 +91,112 @@
     color: var(--black);
 }
 
-.img_text{
+.img_text {
     position: relative;
-    top:-100px;
+    top: -10px;
     opacity: 1;
-    transition: .8s;
+    transition: 1.5s;
+    color: var(--black);
+    font-size: 2vw;
 }
 
-.img_text.active{
+.img_text.active {
     opacity: 0;
-    top: -200px;
+    top: -20px;
 }
 
 
-@media screen and (max-width:768px) {
 
-    .graphics_inner .inner ul{
+
+
+
+
+@media screen and (max-width:770px) {
+
+    .graphics_inner .inner ul {
         width: 100%;
         height: auto;
         flex-wrap: wrap;
     }
 
-    .graphics_inner .inner ul li{
-        width: 30%;
+    .graphics_inner .inner ul li {
+        width: 45%;
+
     }
-    .graph_title{
+
+    .graph_title {
         width: 100%;
         margin-bottom: 16px;
         font-size: 30px;
         height: auto;
         top: -30px;
     }
-    .img_text{
+
+    .img_text {
         position: relative;
         right: -120px;
         top: -100px;
         opacity: 0;
         transition: .4s;
     }
-    
-    .img_text.active{
+
+    .img_text.active {
         opacity: 1;
         top: -50px;
     }
+
+}
+
+@media screen and (min-width:771px) {
+    .stage .img-inner ul {
+        width: 90%;
+        display: flex;
+        justify-content: space-between;
+        gap: 20px;
+        margin-bottom: 20px;
+    }
+
+    .img-wrap {
+        width: 95%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .img-inner ul {
+        position: relative;
+        padding: 10px;
+    }
+
+    ul.poster {
+
+        left: 250px;
+    }
+
+    ul.ad {
+        left: 0;
     
+    }
+
+    ul.detail {
+        left: 250px;
+    }
+
+
+    li.pt {
+        position: absolute;
+        width: 22%;
+        font-size: 2vw;
+        text-align: center;
+    }
+    .pt-pd{
+        left: -280px;
+        top: 200px;
+    }
+
+    .pt-a{
+        right: -280px;
+        top: 200px;
+    }
+   
 }
