--- a/src/css/section/header.css
+++ b/src/css/section/header.css
@@ -24,6 +24,13 @@ body{
     font-size: 1.2rem;
     text-align: center;
     text-transform: uppercase;
+    display: flex;
+    align-items: center;
+}
+
+.header_logo img{
+   padding-right: 5px;
+    width: 25%;
 }
 
 nav {
@@ -43,17 +50,17 @@ nav ul {
 nav ul li a {
     display: block;
     padding: 5px 12px;
-    color: var(--point);
+    color: var(--black);
     font-size: 20px;
     font-style: bold;
     transform: uppercase;
+    position: relative;
 }
 
 nav ul li:hover>a {
     color: var(--white);
-    background: var(--point);
+    background: rgba(0, 0, 0, .5);
 }
-
 
 
 .header_nav_mobile {
@@ -115,17 +122,15 @@ nav ul li:hover>a {
 
     nav ul li a {
         padding: 5px 10px;
-        color: var(--white);
+        color: var(--black);
         border-radius: 10px;
         font-size: 18px;
     }
-    nav li a.on {
-        background-color: rgba(255, 255, 255, 0.3);
-        color: var(--black);
-    }
+    /* nav li a.on {
+        color: var(--point);
+    } */
 
     nav ul li:hover>a {
-        background: var(--point);
         color: #091F5B;
     }
 
@@ -159,6 +164,5 @@ nav ul li:hover>a {
         border-radius: 99px;
         padding: 5px 12px;
     }
-
 
 }
