--- a/src/css/section/intro.css
+++ b/src/css/section/intro.css
@@ -1,7 +1,6 @@
 #Home {
     width: 100%;
     height: 100vh;
-    position: relative;
 }
 
 
@@ -9,85 +8,185 @@
     display: flex;
 }
 
-#Home img{
+
+.home-wrap {
+    position: relative;
     width: 100%;
+    height: 100vh;
 }
 
-.home-wrap{
-    width: 80%;
-}
-
-.home-img{
+.home-inner {
     position: absolute;
-}
-
-.img1{
-    transform: translate(-50%,-50%);
-    left: 50%;
-    top: 40%;
+    overflow: hidden;
     width: 100%;
+    height: 100vh;
 }
 
-.img2{
-    left: 50%;
-    top: 60%;
-    transform: translate(-50%,-50%);
-    z-index: 3;
+.items__layer .items__item {
+    position: relative;
 }
 
-.img3{
-    width: 60%;
-    right: -30%;
-    top: -15%;
-    transform: rotate(-20deg);
+/* .items__layer .items__item:after {
+    position: absolute;
+    transition: all 0.5s ease;
+    visibility: hidden;
+    opacity: 0;
 }
 
-.img4{
-    left: 56%;
-    top: 43%;
-    transform: translate(-50%,-50%);
+.items__layer .items__item:hover:after {
+    visibility: visible;
+    opacity: 1;
+} */
+.backimg{position: absolute;}
+
+.bi1{
+    top: 0;
+    left: 1600px;
+    opacity: 80%;
+    width: 20%;
+}
+.bi2{
+    width: 30%;
+    left: 10px;
+    top: 10px;
+    opacity: 10%;
 }
 
-.preloader-c-area{
+.line {
+    width: 100%;
+    background-color: var(--black300);
+    height: 1px;
+    position: absolute;
+    bottom: 180px;
+    font-size: 4vw;
+    text-transform: uppercase;
+}
+
+.typing{
+    padding-left: 50px;
+}
+
+.preloader-c-area {
     position: absolute;
     width: 100%;
     height: 100%;
     left: 50%;
     top: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     display: flex;
     background: #050038;
     justify-content: center;
-    align-items: center; 
+    align-items: center;
     z-index: 4;
 }
 
-.preloader-c{
+.preloader-c {
     position: absolute;
     width: 150em;
     height: 150em;
-    border-radius: 100%; 
+    border-radius: 100%;
     left: 50%;
     transform: translateX(-50%);
 }
 
-.preloader-c.c-1{
+.preloader-c.c-1 {
     z-index: 5;
     background-color: #ff6575;
 }
 
-.preloader-c.c-2{
+.preloader-c.c-2 {
     z-index: 6;
     background-color: #ffd02f;
 }
- .preloader-c.c-3{
+
+.preloader-c.c-3 {
     z-index: 7;
     background-color: #3f53d9;
- }
- .preloader-c.c-4{
+}
+
+.preloader-c.c-4 {
     z-index: 8;
     background-color: #050038;
- }
+}
 
+@media screen and (max-width:1010px) {
 
+    .img1,
+    .img3,
+    .img4,
+    .img5 {
+        display: none;
+    }
+
+    .img2 {
+        width: 90%;
+        left: 150px;
+        top: 100px;
+    }
+
+}
+
+@media screen and (min-width:1011px) {
+    .img1 {
+        top: 80%;
+    }
+
+    .img2 {
+        width: 28vw;
+        top: 150px;
+        left: 400px;
+    }
+
+    .img3 {
+        width: 12vw;
+        left: 1000px;
+        top: 150px;
+    }
+
+    .img4 {
+        width: 30vw;
+        left: 900px;
+        top: 50px;
+        transform: rotate(-10deg);
+    }
+
+    .img5 {
+        width: 17vw;
+        top: 300px;
+        left: -20px;
+    }
+
+}
+
+@media screen and (min-width:1173px) {
+    .img1 {
+        width: 100%;
+        top: 70%;
+    }
+
+    .img2 {
+        width: 25vw;
+        top: 150px;
+        left: 600px;
+    }
+
+    .img3 {
+        width: 12vw;
+        left: 1400px;
+        top: 200px;
+    }
+
+    .img4 {
+        width: 20vw;
+        left: 1300px;
+        top: 50px;
+        transform: rotate(-10deg);
+    }
+
+    .img5 {
+        width: 17vw;
+        top: 300px;
+        left: -20px;
+    }
+}
 
