--- a/src/css/section/work.css
+++ b/src/css/section/work.css
@@ -22,6 +22,7 @@
     color: var(--black);
     border-bottom: .4vw solid var(--black);
     margin-bottom: 100px;
+    padding-left: 20px;
 }
 
 .work_title em {
@@ -30,66 +31,29 @@
     line-height: 2;
 }
 
-.work_wrap {
-    display: flex;
-    width: 400px;
-}
 
 .work_item {
     width: 400px;
-    height: 70vh;
-    border: 1px solid var(--white);
+    height: 80vh;
     color: var(--black);
-    padding: 2.5rem;
-    margin-right: 20px;
-    background-color: rgb(219, 219, 219);
+    margin-top: 200px;
 }
 
-.work_item .title {
-    font-size: 1.5rem;
-    text-align: center;
-    padding: .8rem 0;
-    font-weight: 700;
-    border-bottom: 2px solid var(--black);
-}
-
-.work_item .desc {
-    font-size: 1.2rem;
-    color: var(--black);
-    border-bottom: 2px solid var(--black);
-}
-
-.work_item .num {
-    font-size: 2rem;
-    font-family: var(--mainNum-font);
-}
-
-.work_item .site {
-    border: 1px solid var(--black);
-    display: block;
-    text-align: center;
-    padding: .5rem 1.5rem;
-    margin-top: 1.5rem;
-}
 
 .work_item.img {
     display: block;
-    margin-top: -20px;
     transition: .35s;
 }
 
 
-.work_item:hover .img {
-    margin-top: 0px;
-}
-
 .work_item .img img {
-    filter: grayscale(100%);
+    transform: scale(1);
     transition: .35s;
 }
 
 .work_item .img:hover img {
-    filter: grayscale(0%);
+    transform: scale(1.2);
+    border-radius: 20px;
 }
 
 
@@ -104,7 +68,7 @@
 
     .work_item {
         width: 300px;
-        padding: 40px 30px;
         height: auto;
+        margin-top: -400px;
     }
 }
