--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,17 +1,18 @@
 @charset "UTF-8";
 /* setting */
+@import url(@fancyapps/ui/dist/fancybox/fancybox.css);
 @import url(@splidejs/splide/css);
-
-@import url(setting/fonts.css);
-@import url(setting/vars.css);
 @import url(setting/reset.css);
+@import url(setting/vars.css);
+@import url(setting/fonts.css);
 
 /* section */
-@import url(section//intro.css);
-@import url(section//header.css);
-@import url(section//about.css);
-@import url(section//graphics.css);
-@import url(section//project.css);
-@import url(section//work.css);
+@import url(section/intro.css);
+@import url(section/header.css);
+@import url(section/project.css);
+@import url(section/graphics.css);
+@import url(section/about.css);
 @import url(section/splide.css);
+@import url(section/work.css);
+
 
