--- a/src/css/section/graphics.css
+++ b/src/css/section/graphics.css
@@ -4,117 +4,58 @@
 
 .graphics_inner {
     width: 100%;
-    height: 100%;
+   margin-top: 50px;
 }
 
 
 .graph_title {
-    position: sticky;
-    top: 70px;
-    left: 0;
+    position:sticky;
+    top: 10%;
     width: 100%;
-    height: 6vw;
-    font-size: 4vw;
-    font-weight: 900;
+    height: 100%;
+    font-size: 7vw;
+    font-weight: 800;
     line-height: 1.2;
     font-family: var(--mainKor-font);
     text-transform: uppercase;
-    color: var(--black);
-    border-bottom: .4vw solid var(--black);
-    margin-bottom: 100px;
-    padding-left: 20px;
-    background: #f3f3f3;
+    color: var(--white);
+
 }
 
 .stage {
     width: 100%;
-    margin: auto;
-    margin-top: 100px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #000;
+    border-radius: 30px;
 }
 
 .stage img {
-    width: 100%;
+    width: 80%;
     transition: .35s;
 }
-.img-inner{
+
+.img-inner {
     text-transform: uppercase;
+    color: var(--white);
 }
+
 
 
 .img_box {
-    position: relative;
     overflow: hidden;
     transition: .35s;
+    
 }
-
-.img_box::before {
-    position: absolute;
-    content: '';
-    width: 100%;
-    height: 100%;
-    background-color: var(--point);
-    left: 0;
-    top: 0;
-    z-index: 2;
-    transition: .35s;
-    transition-delay: .35s;
-}
-
-.img_box::after {
-    position: absolute;
-    content: '';
-    width: 100%;
-    height: 100%;
-    background-color: #13213C;
-    left: 0;
-    top: 0;
-    z-index: 2;
-    transition: .35s;
-    z-index: 3;
-}
-
-.img_box.active::before {
-    width: 0%;
-}
-
-.img_box.active::after {
-    height: 0%;
-}
-
-.graphics_wrap .stage .img_text {
-    width: 50%;
-    color: var(--black);
-}
-
-.graphics_wrap .stage .img_text p {
-    line-height: 1.6px;
-    color: var(--black);
-}
-
-.img_text {
-    position: relative;
-    top: -10px;
-    opacity: 1;
-    transition: 1.5s;
-    color: var(--black);
-    font-size: 2vw;
-}
-
-.img_text.active {
-    opacity: 0;
-    top: -20px;
-}
-
-
-
-
 
 
 
 @media screen and (max-width:770px) {
 
     .graphics_inner .inner ul {
-        width: 100%;
+        width: 80%;
         height: auto;
         flex-wrap: wrap;
     }
@@ -149,54 +90,25 @@
 
 @media screen and (min-width:771px) {
     .stage .img-inner ul {
-        width: 90%;
-        display: flex;
-        justify-content: space-between;
-        gap: 20px;
-        margin-bottom: 20px;
+        width: 100%;
+       margin-left: 100px;
+    }
+
+    .stage .img-inner ul li{
+        padding: 10px;
     }
 
     .img-wrap {
-        width: 95%;
+        width: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
     }
 
-    .img-inner ul {
-        position: relative;
-        padding: 10px;
+    .img-inner {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
-
-    ul.poster {
-
-        left: 250px;
-    }
-
-    ul.ad {
-        left: 0;
-    
-    }
-
-    ul.detail {
-        left: 250px;
-    }
-
-
-    li.pt {
-        position: absolute;
-        width: 22%;
-        font-size: 2vw;
-        text-align: center;
-    }
-    .pt-pd{
-        left: -280px;
-        top: 200px;
-    }
-
-    .pt-a{
-        right: -280px;
-        top: 200px;
-    }
-   
 }
