--- a/src/css/section/header.css
+++ b/src/css/section/header.css
@@ -6,9 +6,9 @@ body{
 #header {
     position: fixed;
     left: 0;
-    top: 0;
-    z-index: 4;
+    top: 0; 
     width: 100%;
+    z-index: 5;
 }
 
 .header_inner {
@@ -18,6 +18,7 @@ body{
     background-color: rgba(85, 57, 57, 0.1);
     backdrop-filter: blur(30px);
     padding: 1rem;
+    
 }
 
 .header_logo {
@@ -131,7 +132,7 @@ nav ul li:hover>a {
     } */
 
     nav ul li:hover>a {
-        color: #091F5B;
+        color: #fcfcfc;
     }
 
     .header_nav.show {
@@ -164,5 +165,6 @@ nav ul li:hover>a {
         border-radius: 99px;
         padding: 5px 12px;
     }
+
 
 }
