--- a/src/css/section/work.css
+++ b/src/css/section/work.css
@@ -1,5 +1,6 @@
 #Work {
     width: 100%;
+    height: 100vh;
     margin-top: 80px;
     overflow: hidden;
 }
@@ -34,7 +35,7 @@
 
 .work_item {
     width: 400px;
-    height: 80vh;
+    height: 100vh;
     color: var(--black);
     margin-top: 200px;
 }
@@ -48,11 +49,13 @@
 
 .work_item .img img {
     transform: scale(1);
+    filter: grayscale(100%);
     transition: .35s;
 }
 
 .work_item .img:hover img {
     transform: scale(1.2);
+    filter: grayscale(0%);
     border-radius: 20px;
 }
 
