--- a/src/css/section/about.css
+++ b/src/css/section/about.css
@@ -1,46 +1,29 @@
 #About {
     width: 100%;
-    height: 100vh;
-    overflow: hidden;
+    position: relative;
 }
 
-#About2{
-    width: 100%;
-    height: 100vh;
-}
-
-#AboutMe {
-    width: 250%;
-    height: 100vh;
-}
-
-.about-item {
-    width: 100%;
-}
-
-.about-wrap {
-    width: 100%;
-    display: flex;
-}
 
 #About img {
     width: 100%;
 }
 
+
 .about_title {
     position: sticky;
-    top: 10px;
+    top: 50px;
     left: 0;
-    width: 48%;
+    width: 100%;
     height: 6vw;
     font-size: 4vw;
     font-weight: 900;
     font-family: var(--mainKor-font);
     text-transform: uppercase;
     color: var(--black);
+    background: #f3f3f3;
     border-bottom: .4vw solid var(--black);
-    z-index: 9999;
     padding-left: 20px;
+    z-index: 2;
 }
 
 /* about */
@@ -48,100 +31,151 @@
 .about_inner {
     width: 100%;
     height: 100vh;
-    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
 
-.item_img {
-    width: 20%;
-    position: absolute;
-    left: 0;
-    top: 10px;
+
+.wrap1 img {
+    width: 100%;
 }
 
-.about1-wrap img {
-    width: 30%;
-}
-
-.about-tx{
-    /* position: absolute; */
-    font-size: 5vw;
+.about-tx {
+    font-size: 3vw;
     font-style: bold;
 }
 
-
-
-/* aboutme */
-.aboutme-sticky{
-    position: sticky;
-    width: 50%;
-    height: 100vh;
-    object-fit: contain;
-    left: 0;
-    top: 0;
-}
-
-
-.a1 {
-    margin-top: 100px;
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-}
-
-.ability .item_line {
-    width: 40%;
-    display: flex;
-    align-items: center;
-    position: relative;
-    left: 40%;
-}
-
-.a1 .me {
+ul.symbol li{
     position: absolute;
-    bottom: 0;
+}
+
+.se1{
+    width:15%;
+    left: 20%;
+    bottom: 13%;
+}
+
+.se2{
+    width: 50%;
+    left: 500px;
+    top: 100px;
+}
+
+.se3{
+    width: 1%;
+    right: 29%;
+    bottom: 39%;
+    z-index: 9999;
+}
+
+
+.skills h3{
+    text-transform: uppercase;
+    font-size: 2.5vw;
+    position: absolute;
+    top: 10px;
     left: 50%;
     transform: translateX(-50%);
 }
 
+ul.skill-list li{
+   position: relative;
+}
+
+.license{
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 13%;
+}
+
+.license ul li{
+    font-size: 2vw;
+}
 
 
-.wrap2 {
+/* aboutme */
+
+#AboutMe {
+    width: 100%;
+   position: relative;
+}
+
+
+.columns{
+    width: 50%;
+    height: 200vh;
+}
+
+.about-item {
     width: 100%;
     height: 100vh;
+}
+.item_text {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
+    width: 100%;
+}
+
+.wrap2{
+    width: 100%;
+    height: 200vh;
+}
+
+.wr1{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.bg1{
+    background-image: url(../../imgs/나나나.jpg);
+    background-size: contain;
+    background-position: left center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    width:50vw;
+    height: 200vh;
+}
+
+
+.a1{
+    display: flex;
+    /* align-items: center; */
+    /* justify-content: center; */
+    flex-direction: column;
+    background-color: var(--subBg300);
+    border-radius: 20px;
+    font-size: 30px;
+}
+
+
+.a2 {
     display: flex;
     align-items: center;
     justify-content: center;
     position: relative;
 }
 
-.wrap2 .intro_text {
+.about-wrapper ul li {
     position: absolute;
     text-transform: uppercase;
-    font-size: 6vw;
+    font-size: 40px;
     font-style: bolder;
     left: 10%;
     top: 50%;
     transform: translateY(-50%);
 }
 
-.item_intro {
+.intro1{
     width: 50%;
 }
 
-.intro_more img {
-    width: 100%;
+@media screen and (max-width:768px) {
+    
 }
-
-.ex-wrap {
-    width: 50%;
-}
-
-.item_explain {
-    font-size: 2.5vw;
-}
-
-
-@media screen and (max-width:768px) {}
