--- a/src/css/section/graphics.css
+++ b/src/css/section/graphics.css
@@ -4,21 +4,23 @@
 
 .graphics_inner {
     width: 100%;
-   margin-top: 50px;
+    margin-top: 50px;
+    position: relative;
 }
 
 
 .graph_title {
-    position:sticky;
-    top: 10%;
+    position:absolute;
+    top: 20px;
+    left: 50px;
     width: 100%;
-    height: 100%;
-    font-size: 7vw;
+    height: 5vw;
+    font-size: 5vw;
     font-weight: 800;
     line-height: 1.2;
     font-family: var(--mainKor-font);
     text-transform: uppercase;
-    color: var(--white);
+    color: var(--black);
 
 }
 
@@ -28,8 +30,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background: #000;
+    background:#D0E4FF;
     border-radius: 30px;
+    padding: 20px;
+    padding-bottom: 70px;
 }
 
 .stage img {
@@ -42,35 +46,114 @@
     color: var(--white);
 }
 
-
-
-.img_box {
-    overflow: hidden;
-    transition: .35s;
-    
+.img-wrap{
+    position: relative;
+    top: 35px;
 }
 
 
 
+.img_box{
+    position: relative;
+    overflow: hidden;
+    transition: .35s;
+}
+
+.img_box::before{
+    position: absolute;   
+    content: '';
+    width: 80%;
+    height:100%;
+    background-color: var(--white);
+    left: 0;
+    top: 0;
+    z-index: 2;
+    transition: .35s;
+    transition-delay: .35s;
+}
+
+.img_box::after{
+    position: absolute;   
+    content: '';
+    width: 80%;
+    height:100%;
+    background-color: #000;
+    left: 0;
+    top: 0;
+    z-index: 2;
+    transition: .35s;
+    z-index: 3;
+}
+
+.img_box.active::before{
+    height: 0%;
+}
+.img_box.active::after{
+    height: 0%;
+}
+
+.img_text{
+    font-size: 32px;
+    position: relative;
+    right: -190px;
+    top: 40px;
+    opacity: 0;
+    transition: .4s;
+}
+
+.img_text.active{
+    opacity: 1;
+    top:30px;
+    right: -190px;
+}
+
+.img-text{
+    font-size: 3vw;
+    position: relative;
+}
+
+.ex{
+    position: absolute;
+}
+
+.ex1{
+    left: -220px;
+    top: 210px;
+}
+
+.ex2{
+    right: -140px;
+    top: 710px;
+}
+
+.ex3{
+    left: -280px;
+    top: 1210px;
+}
+
 @media screen and (max-width:770px) {
 
     .graphics_inner .inner ul {
-        width: 80%;
+        display: flex;
+        width: 100%;
         height: auto;
         flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
     }
 
     .graphics_inner .inner ul li {
-        width: 45%;
-
+        width: 40%;
+        padding: 10px;
     }
 
     .graph_title {
         width: 100%;
-        margin-bottom: 16px;
+        margin-bottom: 10px;
         font-size: 30px;
         height: auto;
-        top: -30px;
+        left: 10px;
+        top: -50px;
     }
 
     .img_text {
@@ -91,12 +174,12 @@
 @media screen and (min-width:771px) {
     .stage .img-inner ul {
         width: 100%;
-       margin-left: 100px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 20px;
     }
 
-    .stage .img-inner ul li{
-        padding: 10px;
-    }
 
     .img-wrap {
         width: 100%;
@@ -107,8 +190,25 @@
 
     .img-inner {
         width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
     }
+
+
+    ul.column{
+        position: relative;
+        left: 300px;
+  
+    }
+
+    ul.column2{
+        position: relative;
+        right: 270px;
+     
+    }
+
+    ul.column3{
+        position: relative;
+        left: 300px;
+       
+    }
+
 }
