--- a/src/css/section/header.css
+++ b/src/css/section/header.css
@@ -15,8 +15,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: rgba(85, 57, 57, 0.1);
-    backdrop-filter: blur(30px);
+    background: var(--white);
     padding: 1rem;
     
 }
@@ -127,9 +126,6 @@ nav ul li:hover>a {
         border-radius: 10px;
         font-size: 18px;
     }
-    /* nav li a.on {
-        color: var(--point);
-    } */
 
     nav ul li:hover>a {
         color: #fcfcfc;
@@ -154,12 +150,6 @@ nav ul li:hover>a {
 }
 
 @media screen and (min-width:769px) {
-    nav li a.on {
-        /* background-color: rgba(255, 255, 255, 0.3);
-        color: var(--white); */
-        border-radius: 99px;
-        padding: 5px 12px;
-    }
 
     nav ul li:hover>a {
         border-radius: 99px;
