--- a/src/css/section/about.css
+++ b/src/css/section/about.css
@@ -8,14 +8,40 @@
     width: 100%;
 }
 
+.item_img {
+    width: 50vw;
+}
+
+.my-wrap {
+    width: 50vw;
+    margin-top: 100px;
+}
+
+
+
+.about_inner {
+    width: 100%;
+    height: 100vh;
+}
+
+ul.symbol li {
+    position: absolute;
+    top: 400px;
+    left: 200px;
+}
+
+.about-wrap1 {
+    display: flex;
+    justify-content: space-between;
+}
 
 .about_title {
     position: sticky;
     top: 50px;
     left: 0;
-    width: 100%;
-    height: 6vw;
-    font-size: 4vw;
+    width: 49%;
+    height: 5vw;
+    font-size: 3vw;
     font-weight: 900;
     font-family: var(--mainKor-font);
     text-transform: uppercase;
@@ -26,156 +52,123 @@
     z-index: 2;
 }
 
-/* about */
-
-.about_inner {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-}
-
-
-.wrap1 img {
-    width: 100%;
-}
-
-.about-tx {
-    font-size: 3vw;
-    font-style: bold;
-}
-
-ul.symbol li{
-    position: absolute;
-}
-
-.se1{
-    width:15%;
-    left: 20%;
-    bottom: 13%;
-}
-
-.se2{
-    width: 50%;
-    left: 500px;
-    top: 100px;
-}
-
-.se3{
-    width: 1%;
-    right: 29%;
-    bottom: 39%;
-    z-index: 9999;
-}
-
-
-.skills h3{
+.about-wrap1 h3{
+    font-size: 30px;
+    font-weight: 900;
     text-transform: uppercase;
-    font-size: 2.5vw;
-    position: absolute;
-    top: 10px;
-    left: 50%;
-    transform: translateX(-50%);
+    padding: 20px;
 }
 
-ul.skill-list li{
-   position: relative;
+ul.skill-list{
+    width: 80%;
+    height: 100%;
+    border-radius: 20px;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+    padding: 20px;
+    background: #bce7ff;
 }
 
-.license{
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    bottom: 13%;
+ul.inform{
+    width: 80%;
+    height: 100%;
+    border-radius: 20px;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: #bce7ff;
+    font-size: 18px;
+    padding: 30px;
+    gap: 20px;
 }
-
-.license ul li{
-    font-size: 2vw;
-}
-
-
-/* aboutme */
-
-#AboutMe {
-    width: 100%;
-   position: relative;
-}
-
-
-.columns{
-    width: 50%;
-    height: 200vh;
-}
-
-.about-item {
-    width: 100%;
+#AboutMe{
+    width: 100vw;
     height: 100vh;
 }
-.item_text {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    padding: 5px;
-    width: 100%;
-}
 
-.wrap2{
-    width: 100%;
-    height: 200vh;
-}
 
-.wr1{
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.bg1{
-    background-image: url(../../imgs/나나나.jpg);
+.bg1 {
+    background-image: url(../../imgs/profilew.jpg);
     background-size: contain;
-    background-position: left center;
+    background-position: left top;
     background-attachment: fixed;
     background-repeat: no-repeat;
-    width:50vw;
-    height: 200vh;
+    width: 50%;
+    height: 150vh;
 }
 
-
-.a1{
+.columns{
+    width: 50vw;
+    height: 150vh;
     display: flex;
-    /* align-items: center; */
-    /* justify-content: center; */
     flex-direction: column;
-    background-color: var(--subBg300);
-    border-radius: 20px;
-    font-size: 30px;
+    align-items: center;
+    gap: 50px;
+    /* padding-top: 250px; */
 }
 
+.aboutme-wrap{
+    display: flex;
+}
 
-.a2 {
+ul.item_intro li{
+    position: absolute;
+}
+
+.a1 .introduce{
+    background: #bce7ff;
+    border-radius: 30px;
+    line-height: 30px;
+    padding: 20px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.about-item{
+    width: 50%;
+    font-size: 18px;
+}
+
+.about-item h4{
     display: flex;
     align-items: center;
     justify-content: center;
-    position: relative;
-}
-
-.about-wrapper ul li {
-    position: absolute;
     text-transform: uppercase;
-    font-size: 40px;
-    font-style: bolder;
-    left: 10%;
-    top: 50%;
-    transform: translateY(-50%);
+    font-size: 2vw;
+    font-weight: 800;
 }
 
-.intro1{
+.a2 ul{
+    width: 100%;
+    height: 100px;
+    flex-wrap: wrap;
+}
+
+.a2 ul li{
+    background: #ff9797;
+    border-radius: 9999px;
     width: 50%;
+    height: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 120px 50px;
+    font-size: 35px;
 }
 
-@media screen and (max-width:768px) {
-    
+.a2 ul li:nth-child(odd) figure{
+    order: 2;
 }
+
+.a3{
+    width: 100%;
+    height: 100%;
+}
+
+.a3 ul li{
+    position: absolute;
+}
+@media screen and (max-width:768px) {}
