--- a/src/css/section/header.css
+++ b/src/css/section/header.css
@@ -72,7 +72,7 @@ nav ul li:hover>a {
     display: block;
     width: 40px;
     height: 3px;
-    background-color: var(--white);
+    background-color: var(--black);
     margin-top: 0;
     position: relative;
 }
@@ -81,7 +81,7 @@ nav ul li:hover>a {
     content: '';
     width: 40px;
     height: 3px;
-    background-color: var(--white);
+    background-color: var(--black);
     top: 10px;
     right: 0;
     position: absolute;
@@ -92,7 +92,7 @@ nav ul li:hover>a {
     content: '';
     width: 40px;
     height: 3px;
-    background-color: var(--white);
+    background-color: var(--black);
     bottom: 10px;
     left: 0;
     position: absolute;
